--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,12 @@ services:
   - type: web
     name: telegram-web-app
     env: go
+    plan: free
+    rootDir: server
     buildCommand: go build -o app .
     startCommand: ./app
     envVars:
       - key: PORT
         value: 8080
-    build:
-      env:
-        GO_VERSION: 1.25.3
+    buildEnvironment:
+      GO_VERSION: 1.25.3
